INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(LIBUNP_SRC error.c)

ADD_LIBRARY(unp SHARED ${LIBUNP_SRC})
ADD_LIBRARY(unp_static STATIC ${LIBUNP_SRC})
SET_TARGET_PROPERTIES(unp_static PROPERTIES OUTPUT_NAME unp)

INSTALL(TARGETS unp unp_static
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/
  DESTINATION include/unp)